# agentic

./: pyproject.toml
src/agentic/: main.py  script.py
